--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,10 @@
 @import "reset";
+@import "config/colors";
 @import "modules/messages";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "modules/messages";
+@import "modules/user";
+@import "modules/flash";
 @import "wrapper";
 @import "mixin";
 @import "side_bar";
