--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,15 +1,15 @@
 .side-bar
   .side-bar__user-name
     .top-items
-      %p.top-items__name
-        アイウエオ
+      %h3.top-items__name
+        = current_user.name
       %ul.top-items__icon
         %ls.top-items__icon__edit
-          = link_to "#", class: "contents__btn" do
-            %i.far.fa-edit
+          = link_to do
+            %i.far.fa-edit.contents__btn
         %ls.top-items__icon__fa-cog
-          = link_to "#", class: "contents__btn" do
-            %i.fa.fa-cog
+          = link_to edit_user_path(current_user) do
+            %i.fa.fa-cog.contents__btn
   .side-bar__group-rist
     .group
       %p.group_name
